# GildedRose-Refactoring-Kata

cpp/: .gitignore
cpp/src/: AgedBrieItem.cc  AgedBrieItem.h  BackstagePassesItem.cc  BackstagePassesItem.h  CMakeLists.txt  CommonItem.cc  CommonItem.h  ConjuredItem.cc  ConjuredItem.h  GildedRose.cc  GildedRose.h  Item.h  ItemCreator.cc  ItemCreator.h  MetaItem.cc  MetaItem.h  SulfurasItem.cc  SulfurasItem.h  macros.h
cpp/test/: CMakeLists.txt
cpp/test/cpp_catch2_unittest/: GildedRoseCatch2UnitTests.cc
cpp/test/cpp_googletest_approvaltest/: GildedRoseGoogletestApprovalTests.cc
cpp/test/cpp_googletest_unittest/: GildedRoseGoogletestUnitTests.cc
cpp/test/cpp_itemCreator_google_unittest/: CMakeLists.txt  ItemCreatorUnitTests.cc
cpp/test/cpp_item_types_google_unittest/: CMakeLists.txt  ItemGoogletestUnitTests.cc
cpp/test/update_quality_tests/: CMakeLists.txt  GildedRoseUpdateQualityTests.AgedBrieTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.BackstagePassesTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.CertifyCorrectRestructureTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.CommonItemTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.ConjuredTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.SulfurasTests_UpdateQualityTestSuite.UpdateQualityVerify_0.approved.txt  GildedRoseUpdateQualityTests.cc
